# curvequery

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  TO_DO_LIST.md  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: initialstate-kpis.yml
curvequery/: __init__.py  _pyvisa_tqdm_patch.py  _tek_3k_4k_mso.py  _tek_series_mso.py  _tek_series_mso_acquire_feat.py  _tek_series_mso_curve_feat.py  _tek_series_mso_setup_feat.py  _tqdm_util.py  api.py  api_types.py  helper_methods.py  instrument.py  mso_tables.py
test/: conftest.py  simple_example.py  test_curve.py  test_curve_analog_math.py  test_curve_digital.py  test_default_setup.py  test_tek_series_curve_analog_math.py  test_tek_series_curve_digital.py  test_tek_series_default_setup.py  test_tek_series_mso_general.py
