[metadata]
name = curvequery
version = attr: curvequery.__VERSION__
description = Visadore plugin that simplifies downloading waveform data from a Tektronix oscilloscope
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Environment :: Console

[options]
zip_safe = False
packages = find:
install_requires =
    visadore

[tool:pytest]
addopts =
    -vv
    -ra
    --strict
    --tb=short
testpaths = test

[options.entry_points]
visadore.tektronix.mso58 =
    curve = curvequery._tek_series_mso:TekSeriesCurveFeat
    default_setup = curvequery._tek_series_mso:TekSeriesDefaultFeat
    setup = curvequery._tek_series_mso:TekSeriesSetupFeat
    acquire = curvequery._tek_series_mso:TekSeriesAcquireFeat
visadore.tektronix.mso56 =
    curve = curvequery._tek_series_mso:TekSeriesCurveFeat
    default_setup = curvequery._tek_series_mso:TekSeriesDefaultFeat
    setup = curvequery._tek_series_mso:TekSeriesSetupFeat
    acquire = curvequery._tek_series_mso:TekSeriesAcquireFeat
visadore.tektronix.mso54 =
    curve = curvequery._tek_series_mso:TekSeriesCurveFeat
    default_setup = curvequery._tek_series_mso:TekSeriesDefaultFeat
    setup = curvequery._tek_series_mso:TekSeriesSetupFeat
    acquire = curvequery._tek_series_mso:TekSeriesAcquireFeat
visadore.tektronix.mso46 =
    curve = curvequery._tek_series_mso:TekSeriesCurveFeat
    default_setup = curvequery._tek_series_mso:TekSeriesDefaultFeat
    setup = curvequery._tek_series_mso:TekSeriesSetupFeat
    acquire = curvequery._tek_series_mso:TekSeriesAcquireFeat
visadore.tektronix.mso44 =
    curve = curvequery._tek_series_mso:TekSeriesCurveFeat
    default_setup = curvequery._tek_series_mso:TekSeriesDefaultFeat
    setup = curvequery._tek_series_mso:TekSeriesSetupFeat
    acquire = curvequery._tek_series_mso:TekSeriesAcquireFeat